@@ -192,6 +192,7 @@ public abstract class Message {
      * parsing of the entity.
      * 
      * @return The entity as a higher-level object.
+     * @see org.restlet.service.ConverterService
      */
     public Object getEntityAsObject() {
         return getConverterService().toObject(getEntity());
@@ -261,6 +262,7 @@ public abstract class Message {
      * 
      * @param object
      *                The higher-level object.
+     * @see org.restlet.service.ConverterService
      */
     public void setEntity(Object object) {
         if (object instanceof Representation) {
